Fixing header alignment.

--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -17,16 +17,11 @@
     font-size: 30px;
   }
   
-  .cherry-logo {
-    display: flex;
-    align-items: center;
-  }
-  
-  ion-toolbar, .header-content {
+  .cherry-logo, ion-toolbar, .header-content {
     display: flex;
     align-items: center;
     justify-content: center;
-  }
+}
   
   #cherry-icon {
     width: 40px;
