--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -5,6 +5,12 @@
     margin-right: 330px;
 }
 
+ion-label {
+    font-family: 'Inter';
+    color: #0E103D;
+    font-size: 18px;
+  }
+
 .cherry-label {
     font-family: 'Cherry Bomb';
     color: #84012A;
